--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat
+
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+
+
+    html 
+    color-scheme: light dark
+    @include mat.theme((
+        color: mat.$violet-palette,
+        typography: Roboto,
+        density: 0
+    ))
