added schedule edit page

--- a/src/app/components/menu/menu.component.sass
+++ b/src/app/components/menu/menu.component.sass
@@ -1,10 +1,10 @@
 @use '@angular/material' as mat
     
-.container__menu
+.container-menu
     display: flex
     justify-content: center
     align-items: center
-    margin-top: 20px
+    margin: 20px 0
 
     button
       @include mat.button-overrides((
