--- a/src/app/pages/customer-edit/customer-edit.component.sass
+++ b/src/app/pages/customer-edit/customer-edit.component.sass
@@ -1,21 +1,21 @@
-.container__edit-customer
+.container-edit-customer
     width: 80%
     margin: auto
     margin-top: 30px
 
-    .form__customer
+    .form-customer
         width: 100%
 
-        .form__input
+        .form-input
             width: 100%
 
-        .form__bottom
+        .form-bottom
             display: flex
             gap: 20px
 
-            .form__input
+            .form-input
                 width: 50%
         
-        .form__button
+        .form-button
             display: flex
             justify-content: center
