--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -1,5 +1,5 @@
-<div class="container__customers">
-  <div class="container__button">
+<div class="container-customers">
+  <div class="container-button">
     <button
       routerLink="/edit-customer"
       mat-fab
@@ -8,7 +8,7 @@
       <mat-icon>add</mat-icon>
     </button>
   </div>
-  <div class="container__table">
+  <div class="container-table">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
