--- a/src/app/pages/customer-edit/customer-edit.component.html
+++ b/src/app/pages/customer-edit/customer-edit.component.html
@@ -1,23 +1,23 @@
-<div class="container__edit-customer">
-  <form class="form__customer">
-    <mat-form-field class="form__input">
+<div class="container-edit-customer">
+  <form class="form-customer">
+    <mat-form-field class="form-input">
       <mat-label>Name</mat-label>
       <input matInput placeholder="Sasha" />
     </mat-form-field>
 
-    <div class="form__bottom">
-      <mat-form-field class="form__input">
+    <div class="form-bottom">
+      <mat-form-field class="form-input">
         <mat-label>Email</mat-label>
         <input matInput placeholder="sasha@catmail.com" />
       </mat-form-field>
 
-      <mat-form-field class="form__input">
+      <mat-form-field class="form-input">
         <mat-label>Phone</mat-label>
         <input matInput placeholder="+55 11 98765432" />
       </mat-form-field>
     </div>
 
-    <div class="form__button">
+    <div class="form-button">
       <button mat-stroked-button>Add</button>
     </div>
   </form>
