--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -1,5 +1,5 @@
-<div class="container__schedules">
-  <div class="container__button">
+<div class="container-schedules">
+  <div class="container-button">
     <button
       routerLink="/edit-schedule"
       mat-fab
@@ -8,20 +8,20 @@
       <mat-icon>add</mat-icon>
     </button>
   </div>
-  <div class="container__table">
+  <div class="container-table">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
+      <ng-container matColumnDef="customer">
+        <th mat-header-cell *matHeaderCellDef>Customer</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef>Phone</th>
+      <ng-container matColumnDef="start-at">
+        <th mat-header-cell *matHeaderCellDef>Start At</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
+      <ng-container matColumnDef="end-at">
+        <th mat-header-cell *matHeaderCellDef>End At</th>
         <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
       </ng-container>
 
