--- a/src/app/pages/schedules/schedules.component.sass
+++ b/src/app/pages/schedules/schedules.component.sass
@@ -1,8 +1,8 @@
-.container__schedules
+.container-schedules
     width: 80%
     margin: 25px auto
 
-    .container__button
+    .container-button
         display: flex
         justify-content: flex-end
         margin-bottom: 15px
@@ -13,7 +13,7 @@
             a
                 color: inherit
 
-    .container__table
+    .container-table
         max-height: 500px 
         overflow: auto
         
