--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -9,29 +9,33 @@
     </button>
   </div>
   <div class="container-table">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="customers" class="mat-elevation-z8">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let customer">{{ customer.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef>Phone</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let customer">{{ customer.phone }}</td>
       </ng-container>
 
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        <td mat-cell *matCellDef="let customer">{{ customer.email }}</td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef>Edit</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let customer">
           <button mat-fab aria-label="Example icon button with a delete icon">
             <mat-icon>delete</mat-icon>
           </button>
-          <button mat-fab aria-label="Example icon button with a delete icon">
+          <button
+            [routerLink]="['/edit-customer/', customer.customerId]"
+            mat-fab
+            aria-label="Example icon button with a delete icon"
+          >
             <mat-icon>edit</mat-icon>
           </button>
         </td>
