--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -28,7 +28,11 @@
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef>Edit</th>
         <td mat-cell *matCellDef="let customer">
-          <button mat-fab aria-label="Example icon button with a delete icon">
+          <button
+            (click)="openDialog(customer.customerId)"
+            mat-fab
+            aria-label="Example icon button with a delete icon"
+          >
             <mat-icon>delete</mat-icon>
           </button>
           <button
