finished employee implementation and started schedule logic

--- a/src/app/pages/employee-edit/employee-edit.component.html
+++ b/src/app/pages/employee-edit/employee-edit.component.html
@@ -37,7 +37,8 @@
     </div>
 
     <div class="form-button">
-      <button type="submit" mat-stroked-button>
+      <button [routerLink]="['/employees']" mat-stroked-button>Cancel</button>
+      <button type="submit" mat-flat-button>
         {{ id ? "Update" : "Add" }}
       </button>
     </div>
