--- a/src/app/pages/customer-edit/customer-edit.component.html
+++ b/src/app/pages/customer-edit/customer-edit.component.html
@@ -26,7 +26,8 @@
     </div>
 
     <div class="form-button">
-      <button type="submit" mat-stroked-button>
+      <button [routerLink]="['/customers']" mat-stroked-button>Cancel</button>
+      <button type="submit" mat-flat-button>
         {{ id ? "Update" : "Add" }}
       </button>
     </div>
