--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -9,25 +9,34 @@
     </button>
   </div>
   <div class="container-table">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="schedules" class="mat-elevation-z8">
       <ng-container matColumnDef="customer">
         <th mat-header-cell *matHeaderCellDef>Customer</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let schedule">
+          {{ schedule.customer.name }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="employee">
+        <th mat-header-cell *matHeaderCellDef>Employee</th>
+        <td mat-cell *matCellDef="let schedule">
+          {{ schedule.employee.name }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="start-at">
         <th mat-header-cell *matHeaderCellDef>Start At</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let schedule">{{ schedule.startAt }}</td>
       </ng-container>
 
       <ng-container matColumnDef="end-at">
         <th mat-header-cell *matHeaderCellDef>End At</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        <td mat-cell *matCellDef="let schedule">{{ schedule.endAt }}</td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef>Edit</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let schedule">
           <button mat-fab aria-label="Example icon button with a delete icon">
             <mat-icon>delete</mat-icon>
           </button>
