--- a/src/app/pages/schedule-edit/schedule-edit.component.sass
+++ b/src/app/pages/schedule-edit/schedule-edit.component.sass
@@ -2,9 +2,13 @@
     width: 75%
     height: 50vh
     margin: auto
-    display: flex
-    flex-direction: row
-    gap: 50px
+    
+
+    .form-schedule
+        width: 100%
+        display: flex
+        flex-direction: row
+        gap: 50px
 
     .container-right
         width: 65%
@@ -23,6 +27,7 @@
     .form-button
         display: flex
         justify-content: center
+        gap: 20px
 
         button
             width: 100px
