--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -26,21 +26,33 @@
 
       <ng-container matColumnDef="start-at">
         <th mat-header-cell *matHeaderCellDef>Start At</th>
-        <td mat-cell *matCellDef="let schedule">{{ schedule.startAt }}</td>
+        <td mat-cell *matCellDef="let schedule">
+          {{ formatString(schedule.startAt) }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="end-at">
         <th mat-header-cell *matHeaderCellDef>End At</th>
-        <td mat-cell *matCellDef="let schedule">{{ schedule.endAt }}</td>
+        <td mat-cell *matCellDef="let schedule">
+          {{ formatString(schedule.endAt) }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef>Edit</th>
         <td mat-cell *matCellDef="let schedule">
-          <button mat-fab aria-label="Example icon button with a delete icon">
+          <button
+            (click)="openDialog(schedule.scheduleId)"
+            mat-fab
+            aria-label="Example icon button with a delete icon"
+          >
             <mat-icon>delete</mat-icon>
           </button>
-          <button mat-fab aria-label="Example icon button with a delete icon">
+          <button
+            [routerLink]="['edit-schedule/', schedule.scheduleId]"
+            mat-fab
+            aria-label="Example icon button with a delete icon"
+          >
             <mat-icon>edit</mat-icon>
           </button>
         </td>
